project/test/semantics/bad/input/Bad16_shouldCheckDuplicatesBetweenFunctionParamsAndWithValuesSection.ty
mutable class SomeMutableClass {

    values: {
        total: Int;
        goodAttribute: Void = Pass;
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
    }
    
    functions: {
        getValue: () -> Int = 50
        
        goodFunction: (param1: Int, param2: String, param3: Bool) -> Int = param1
        
        badFunction: (val1: Int, val2: Int, val3: Int) -> Int = {
            this.var1
        } with values: {
            val4: Int = 4;
            val3: Int = 8; // DuplicateDeclarationError
            val0: Int = 5;
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Void = Pass
    }
}
